# ELT_Pipeline

./: .dockerignore  .gitignore  Dockerfile.dwh  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data_extraction/: load_data.py
orchestration/: definitions.py
orchestration/.tmp_dagster_home_44wg7rzx/history/: runs.db
orchestration/.tmp_dagster_home_44wg7rzx/history/runs/: index.db
orchestration/.tmp_dagster_home_44wg7rzx/schedules/: schedules.db
orchestration/.tmp_dagster_home_b5_zj91p/history/: runs.db
orchestration/.tmp_dagster_home_b5_zj91p/history/runs/: 3d6a8202-5bc6-4941-9a05-6434d784b8d3.db  a005a25c-370f-4f04-99c7-8356154ea4f2.db  index.db
orchestration/.tmp_dagster_home_b5_zj91p/schedules/: schedules.db
orchestration/.tmp_dagster_home_d81s7k2m/history/: runs.db
orchestration/.tmp_dagster_home_d81s7k2m/history/runs/: dd46964b-c195-4a2f-babe-31d29ae0e7c8.db  index.db
orchestration/.tmp_dagster_home_d81s7k2m/schedules/: schedules.db
orchestration/.tmp_dagster_home_e6a6u8ht/history/: runs.db
orchestration/.tmp_dagster_home_e6a6u8ht/history/runs/: .db  c4a5ac10-8b72-4976-9c6d-b98d82f0195c.db  index.db  (+2 more)
orchestration/.tmp_dagster_home_e6a6u8ht/schedules/: schedules.db
postgres_dbt/: .gitignore  .user.yml  dbt_project.yml
postgres_dbt/models/dim/: customers.sql  location.sql
postgres_dbt/models/fct/: fact_tables.sql
postgres_dbt/models/marts/: analytics.sql  ml_inference.sql  ml_testing.sql  ml_training.sql
postgres_dbt/models/src/: sources.yml  src_customer.sql  src_loans.sql  src_location.sql
(+14 files in other folders)
